Addition of annimation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         <img class="choice-img" id="s" src="https://image.flaticon.com/icons/png/128/2107/2107533.png">
     </div>
 
-    <p>Click on your choice</p>
+    <p id="choice-icon">Click on your choice</p>
+
+    <div id="button">
+     <button onClick="window.location.reload();">Reload game</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
